Fix HOME tab spacing issue in mobile navigation only

--- a/css/style.css
+++ b/css/style.css
@@ -1304,7 +1304,7 @@ fieldset {
         width: 220px;
         margin: 0 auto;
         position: relative;
-        right: 60px;
+        right: 2px;
         order: 2;
     }
     /* Skills section tablet */
